Ajout du bundle knpMenuBundle

--- a/src/Clamz/CdsBundle/Resources/views/layout.html.twig
+++ b/src/Clamz/CdsBundle/Resources/views/layout.html.twig
@@ -13,7 +13,8 @@
     <body>
     	<header>
     		<nav>
-    			<!-- render menu -->
+    			{% set menuItem = knp_menu_get('main', [], {'some_option': 'my_value'}) %}
+    			{{ knp_menu_render(menuItem) }}
     		</nav>
     	</header>
     	<div id="content">
