--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,11 +3,27 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+        	{% stylesheets 'bundles/clamzcdssite/css/*'  'bundles/clamzchemindusonuser/css/*' filter="cssrewrite, ?yui_css" output="css/main.css" %}
+			    <link rel="stylesheet" href="{{ asset_url }}" />
+			{% endstylesheets %}
+        {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+    	<header>
+    		<nav>
+    			{{ knp_menu_render('main') }}
+    		</nav>    		
+    	</header>
+    	<div id="content">
+        	{% block body %}
+        	{% endblock %}
+        </div>
+        {% block javascripts %}
+        	{% javascripts 'bundles/clamzcdssite/js/*' filter='yui_js' %}
+			    <script type="text/javascript" src="{{ asset_url }}"></script>
+			{% endjavascripts %}
+        {% endblock %}
     </body>
 </html>
