--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,9 +4,17 @@
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
-        	{% stylesheets 'bundles/clamzcdssite/css/*'  'bundles/clamzchemindusonuser/css/*' filter="cssrewrite, ?yui_css" output="css/main.css" %}
+        	{% stylesheets 'bundles/clamzcdssite/css/*'
+        					'bundles/clamzchemindusonuser/css/*' 
+        					filter="cssrewrite" output="css/main.css" %}
 			    <link rel="stylesheet" href="{{ asset_url }}" />
 			{% endstylesheets %}
+			
+			{% stylesheets 'bundles/clamzcdssite/css/ui-lightness/jquery-ui-1.9.1.custom.css'
+        					filter="cssrewrite, ?yui_css" output="css/main2.css" %}
+			    <link rel="stylesheet" href="{{ asset_url }}" />
+			{% endstylesheets %}
+			
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
@@ -21,9 +29,13 @@
         	{% endblock %}
         </div>
         {% block javascripts %}
-        	{% javascripts 'bundles/clamzcdssite/js/*' filter='yui_js' %}
+        	{% javascripts 'bundles/clamzcdssite/js/jquery-1.8.2.min.js'
+        					'bundles/clamzcdssite/js/*'
+        					'bundles/cdsband/js/*' filter='?yui_js' %}
 			    <script type="text/javascript" src="{{ asset_url }}"></script>
 			{% endjavascripts %}
+			<script type="text/javascript" src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+			<script type="text/javascript" src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
         {% endblock %}
     </body>
 </html>
