--- a/src/Clamz/CheminDuSon/SiteBundle/Resources/views/Accueil/accueil.html.twig
+++ b/src/Clamz/CheminDuSon/SiteBundle/Resources/views/Accueil/accueil.html.twig
@@ -1,5 +1,5 @@
 {% extends "ClamzCdsSiteBundle::layout.html.twig" %}
 
 {% block body %}
-{{ user.username }}
+{%  include "ClamzCdsSiteBundle:Accueil:accueil_content.html.twig" %}
 {% endblock body %}
