--- a/src/Clamz/CheminDuSon/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Clamz/CheminDuSon/UserBundle/Resources/views/Registration/register.html.twig
@@ -1,4 +1,6 @@
 {% extends "FOSUserBundle::layout.html.twig" %}
+
 {% block fos_user_content %}
-{% include "ClamzCheminDuSonUserBundle:Security:login_content.html.twig" %}
+{% include "FOSUserBundle:Registration:register_content.html.twig" %}
 {% endblock fos_user_content %}
+
