Ajout d'un block tags dans l'écran de gestion des groupes

--- a/src/Clamz/CheminDuSon/BandBundle/Resources/views/Band/include/list-band-tabs.inc.html.twig
+++ b/src/Clamz/CheminDuSon/BandBundle/Resources/views/Band/include/list-band-tabs.inc.html.twig
@@ -1,9 +1,12 @@
 {% trans_default_domain "bandbundle" %}
+{% include 'CdsBandBundle:Band/include:tags.inc.html.twig' %}
 <div id="tabs">
+	
 	<ul>
 		<li class="{{ (select=='new')?"active":"" }}"><a href="{{ path('new_bands') }}" title="{{ "band.list.new.title" | trans }}">{{ "band.list.new.value" | trans }}</a></li>
 		<li class="{{ (select=='recommended')?"active":"" }}"><a href="{{ path('recommended_bands') }}" title="{{ "band.list.new.title" | trans }}">test</a></li>
 	</ul>
+	
 </div>
 
 <div id="content-list">
