--- a/src/Clamz/CheminDuSon/BandBundle/Resources/public/css/tags.css
+++ b/src/Clamz/CheminDuSon/BandBundle/Resources/public/css/tags.css
@@ -1,8 +1,5 @@
 div#band-tags-container{
-	float: right;
-	margin: 20px 160px 0 0;
-	z-index: 50;
-	position: relative;
+	display: table-cell;
 }
     
     div#band-tags-container h4#band-tags-title{
@@ -33,3 +30,7 @@ div#band-tags-container{
 		    margin: 2px;
 		    padding: 2px 10px;
         }
+div.action-container div.button-container{
+    display: table-cell;
+    padding: 0 15px;
+}
